# FrankClaw

./: .env.docker.example  .gitignore  AUDIT_PLAN.md  CHANNEL_SETUP.md  CLAUDE.md  Cargo.toml  PARITY_TODO.md  README.md  ROADMAP.md  THIRD_PARTY_LICENSES  docker-compose.yml  frankclaw.json.example  frankclaw.toml.example
crates/frankclaw-channels/: Cargo.toml
crates/frankclaw-channels/src/: discord.rs  email.rs  fixture_signal_receive_attachment.json  fixture_telegram_message_with_photo.json  inbound_media.rs  lib.rs  media_text.rs  outbound_media.rs  signal.rs  slack.rs  telegram.rs  whatsapp.rs
crates/frankclaw-cli/: Cargo.toml
crates/frankclaw-cli/src/: main.rs  repl.rs
crates/frankclaw-core/: Cargo.toml
crates/frankclaw-core/src/: auth.rs  channel.rs  config.rs  error.rs  hooks.rs  lib.rs  media.rs  model.rs  protocol.rs  tool_approval.rs  tool_services.rs  types.rs
crates/frankclaw-gateway/: Cargo.toml
crates/frankclaw-gateway/src/: auth.rs  canvas.rs  delivery.rs  lib.rs  methods.rs  openai_api.rs  pairing.rs  server.rs  state.rs  ui.rs  webhooks.rs  ws.rs
crates/frankclaw-models/: Cargo.toml
crates/frankclaw-runtime/: Cargo.toml
crates/frankclaw-runtime/src/: commands.rs  context.rs  leak_detector.rs  lib.rs
docker/frankclaw/: Dockerfile
docs/: AUDIT_PLAN.md  CHANNEL_SETUP.md  IRONCLAW_COMPARISON.md  PARITY_TODO.md  WHATSAPP_SETUP.md
examples/channels/: discord.json  discord.toml  email.json  email.toml  signal.json  signal.toml  slack.json  slack.toml  telegram.json  telegram.toml  web.json  web.toml  whatsapp.json  whatsapp.toml
(+27 files in other folders)
